--- a/web-app/less/common.less
+++ b/web-app/less/common.less
@@ -69,3 +69,9 @@ body.embedded {
 		display:none;
 	}
 }
+body.live-show-view #toolbarForm {
+	height:5%;
+}
+body.live-show-view #canvas {
+	height:95%;
+}
